# multi_track

./: .gitignore  CMakeLists.txt  README.md  ServerControl  multi_track.cpp
multi_track/: package-info.json
multi_track/docs/refpages/: multi_track.maxref.xml
multi_track/help/: multi_track.maxhelp  server_config.js  server_config.maxpat
